--- a/src/styles/import/_variable.scss
+++ b/src/styles/import/_variable.scss
@@ -1,6 +1,1 @@
-$base-font: 'Noto Sans JP', sans-serif;
-$font-size-pc: 16;
-$font-size-sp: 16;
-$pc-width: 1440;
-$sp-width: 375;
-$black: #212e3a;
+// empty
