--- a/src/styles/shared/_footer.scss
+++ b/src/styles/shared/_footer.scss
@@ -1,1 +1,19 @@
 @use '../import' as *;
+
+.footer {
+  display: grid;
+  gap: 10px;
+  padding: 30px;
+  text-align: center;
+  background-color: #eee;
+
+  a {
+    text-decoration: underline;
+  }
+}
+
+.footer-nav {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
